local kubernetes files/cassandra-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: cassandra
  labels:
    io.kompose.service: cassandra
spec:
  serviceName: "cassandra"
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: cassandra
  template:
    metadata:
      labels:
        io.kompose.network/movimingle-integration-test-backend: "true"
        io.kompose.service: cassandra
    spec:
      containers:
        - name: cassandra
          image: cassandra:5
          ports:
            - containerPort: 9042
              protocol: TCP
            - containerPort: 7000
              protocol: TCP
          readinessProbe:
            exec:
              command:
              - /bin/bash
              - -c
              - "cqlsh -e 'SELECT now() FROM system.local'"
            initialDelaySeconds: 90
            timeoutSeconds: 20
            periodSeconds: 30
            failureThreshold: 5
          livenessProbe:
            exec:
              command:
              - /bin/bash
              - -c
              - "nodetool status"
            initialDelaySeconds: 120
            timeoutSeconds: 20
            periodSeconds: 60
            failureThreshold: 5
          resources:
            requests:
              memory: "1.5Gi"
              cpu: "1"
            limits:
              memory: "2Gi"
              cpu: "2"
          volumeMounts:
            - mountPath: /var/lib/cassandra/data
              name: cassandra-data
  volumeClaimTemplates:
    - metadata:
        name: cassandra-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
