local kubernetes files/favorites-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: favorites-service
  labels:
    io.kompose.service: favorites-service
spec:
  replicas: 2
  selector:
    matchLabels:
      io.kompose.service: favorites-service
  template:
    metadata:
      labels:
        io.kompose.service: favorites-service
    spec:
      containers:
      - name: favorites-service
        image: ghcr.io/kalopresli/movimingle-integration-test/favorites-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources: 
            requests:
              memory: 256M  # Setting memory request
              cpu: 0.5  # Setting CPU request
            limits:
              memory: 512M  # Setting memory limit
              cpu: 1  # Setting CPU limit
