local kubernetes files/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react-frontend
  template:
    metadata:
      labels:
        app: react-frontend
    spec:
      containers:
        - name: react-frontend
          image: ghcr.io/kalopresli/movimingle-frontend-demo/movimingle-react-demo:v1.0.5
          ports:
            - containerPort: 80
