local kubernetes files/voting-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: voting-service
  name: voting-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: voting-service
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.31.2 (a92241f79)
      creationTimestamp: null
      labels:
        io.kompose.network/movimingle-integration-test-backend: "true"
        io.kompose.service: voting-service
    spec:
      containers:
        - image: ghcr.io/kalopresli/movimingle-integration-test/voting-service:1.0.3
          name: voting-service
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
              protocol: TCP
          resources: 
            requests:
              memory: 256M  # Setting memory request
              cpu: 0.5  # Setting CPU request
            limits:
              memory: 512M  # Setting memory limit
              cpu: 1  # Setting CPU limit
          volumeMounts:
            - mountPath: /app/logs
              name: voting-service-claim0
      restartPolicy: Always
      volumes:
        - name: voting-service-claim0
          persistentVolumeClaim:
            claimName: voting-service-claim0
status: {}
