local kubernetes files/cassandra-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: cassandra
  name: cassandra
spec:
  ports:
    - name: "9042"
      port: 9042
      targetPort: 9042
    - name: "7000"
      port: 7000
      targetPort: 7000
  selector:
    io.kompose.service: cassandra
status:
  loadBalancer: {}
