local kubernetes files/favorites-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: favorites-service
  labels:
    io.kompose.service: favorites-service
spec:
  type: NodePort
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    nodePort: 30000
  selector:
    io.kompose.service: favorites-service
