local kubernetes files/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-frontend
spec:
  selector:
    app: react-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 31111
  type: NodePort  # Use NodePort for local access
