local kubernetes files/favorites-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: favorites-service-route
  namespace: default
spec:
  parentRefs:
    - name: eg
      namespace: default
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /favorites
        - path:
            type: PathPrefix
            value: /send
        - path:
            type: PathPrefix
            value: /movies
      backendRefs:
        - name: favorites-service
          port: 8080
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: favorites-jwt-policy
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: favorites-service-route
  cors:
    allowOrigins:
    - "*"
    allowMethods:
    - "*"
    allowHeaders:
    - "*"
    exposeHeaders:
    - "*"
  jwt:
    providers:
      - name: auth0-jks
        remoteJWKS:
          uri: "https://dev-1stzxsysq7dqu1j0.us.auth0.com/.well-known/jwks.json"
