local kubernetes files/voting-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: voting-service-route
  namespace: default
spec:
  parentRefs:
    - name: eg
      namespace: default
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /party
      backendRefs:
        - name: voting-service
          port: 8081
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: cors-app
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: voting-service-route
  cors:
    allowOrigins:
    - "http://localhost:31111"
    allowOrigins:
    - "*"
    allowMethods:
    - "*"
    allowHeaders:
    - "*"
    exposeHeaders:
    - "*"
  jwt:
    providers:
      - name: auth0-jks
        remoteJWKS:
          uri: "https://dev-1stzxsysq7dqu1j0.us.auth0.com/.well-known/jwks.json"
